# mux

./: .gitignore  Cargo.toml  DESIGN.md  README.md  flake.nix
persistterm-client/: Cargo.toml
persistterm-client/src/: detach.rs  input.rs  lib.rs  net.rs  render.rs  ssh.rs
persistterm-proto/: Cargo.toml
persistterm-proto/src/: codec.rs  lib.rs  messages.rs  types.rs
persistterm-server/: Cargo.toml
persistterm-server/src/: lib.rs  net.rs  pty.rs  session.rs  terminal.rs
src/: cli.rs  config.rs  daemon.rs  main.rs  paths.rs  session_mgmt.rs
