[package]
name = "persistterm-proto"
version = "0.1.0"
edition = "2021"

[features]
tokio = ["dep:tokio"]

[dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
bitflags = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["io-util"], optional = true }
