[package]
name = "persistterm-server"
version = "0.1.0"
edition = "2021"

[dependencies]
persistterm-proto = { path = "../persistterm-proto", features = ["tokio"] }
tattoy-wezterm-term = "0.1.0-fork.5"
tattoy-termwiz = "0.24.0-fork.2"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1"
